# fleetfs

./: .dockerignore  .fossa.yml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.integration_tests  Makefile  README.md  bench.sh  build.rs  cloud_fio.sh  deny.toml  integration_test.sh  local_disk_bench.sh  pjdfs.sh  test.sh  xfstests.sh
.github/workflows/: ci.yml
client/: main.py  requirements.txt
cloud_benchmark/: README.md  aggregate_fio.py  cloud_fio.sh  statefulset.yaml
cloud_benchmark/terraform/: .gitignore  README.md  main.tf  variables.tf
flatbuffers/: messages.fbs
src/: client.rs  core.rs  data_storage.rs  distributed_file.rs  file_handler.rs  fleetfs.rs  fuse.rs  fuse_adapter.rs  local_storage.rs  main.rs  metadata_storage.rs  peer_client.rs  raft_manager.rs  storage_node.rs  tcp_client.rs  utils.rs
src/base/: fast_data_protocol.rs  length_prefixed_vec.rs  local_context.rs  message_types.rs  message_utils.rs  mod.rs  raft_utils.rs  response_types.rs  utils.rs
src/client/: cluster_client.rs  mod.rs  node_client.rs  peer_client.rs  tcp_client.rs
src/fleetfs/: client.rs  core.rs  fuse.rs  tcp_client.rs
src/handlers/: client_request_handler.rs  fsck_handler.rs  mod.rs  raft_handler.rs  router.rs  transaction_coordinator.rs
src/server/: fsck_handler.rs  mod.rs  router.rs  storage_node.rs  transaction_coordinator.rs
src/storage/: data_storage.rs  file_storage.rs  lock_table.rs  metadata_storage.rs  mod.rs  raft_group_manager.rs  raft_manager.rs  raft_node.rs  storage_node.rs
src/storage/local/: data_storage.rs  error_helper.rs  file_storage.rs  metadata_storage.rs  mod.rs  response_helpers.rs
src/storage/message_handlers/: fsck_handler.rs  mod.rs  router.rs  transaction_coordinator.rs  write_handler.rs
