[package]
name = "fleetfs"
description = "FleetFS"
license = "Apache-2.0"
repository = "https://github.com/fleetfs/fleetfs"
version = "0.2.0"
authors = ["Christopher Berner <christopherberner@gmail.com>"]
edition = "2021"
rust-version = "1.65"
exclude = ["*.sh", "cloud_benchmark/"]

[dependencies]
futures = "0.3"
futures-util = "0.3.8"
tokio-util = { version = "0.7.0", features = ['codec'] }
tokio = { version = "1.17", features = ['io-util', 'time', 'rt-multi-thread', 'net'] }
clap = { version = "3.1", features = ["cargo"] }
log = "0.4"
env_logger = "0.9"
slog-stdlog = "4.1"
slog = "2.7" # slog is only used by the raft dependency
fuser = { version = "0.11.0", features = ['abi-7-30'], default-features = false }
rkyv = { version = "0.7.38", features = ["validation", "archive_le", "strict"] }
bytecheck = "0.6.8"
redb = "0.11.0"
libc = "0.2"
byteorder = "1.3"
thread_local = "1.1.4"
sha2 = "0.10"
walkdir = "2.3"
# Use our forked version of raft
raft = { version = "0.6", package = "fleetfs_raft" }
protobuf = { version = "2.24", features = ['with-bytes'] }
rand = "0.8"
bytes = "1.0"

[dev-dependencies]
tempfile = "3.1"

[profile.release]
debug = true
